# openwhisk-arm

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: controller-api.yml  invoker.yml  runtimes.yml  webui.yml
config/controller/: config.yaml
config/invoker/: config.yaml
config/nginx/: nginx.conf
runtimes/blackbox/: README.md
runtimes/go123/: Dockerfile  go.mod  main.go
runtimes/nodejs20/: Dockerfile  package.json  proxy.js
runtimes/python312/: Dockerfile  actionproxy.py
services/controller-api/: Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt
services/controller-api/app/: __init__.py  config.py  extensions.py
services/controller-api/app/api/: __init__.py  auth.py
services/controller-api/app/api/v1/: __init__.py  actions.py  activations.py  namespaces.py  packages.py  rules.py  triggers.py  web.py
services/controller-api/app/models/: __init__.py  action.py  activation.py  database.py  limits.py  namespace.py  package.py  rule.py  sqlalchemy_models.py  trigger.py
services/controller-api/app/services/: __init__.py  invocation.py  messaging.py  scheduler.py  storage.py
services/controller-api/app/utils/: serializers.py  validators.py
services/controller-api/tests/: conftest.py
services/invoker/: Dockerfile  go.mod
services/invoker/cmd/invoker/: main.go
services/invoker/internal/config/: config.go
services/invoker/internal/container/: manager.go  pool.go
services/invoker/internal/executor/: executor.go
services/invoker/internal/messaging/: consumer.go  publisher.go
services/invoker/internal/runtime/: logs.go  proxy.go
services/invoker/pkg/types/: activation.go  container.go
services/webui/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
services/webui/src/: App.tsx  index.css  main.tsx
services/webui/src/api/: client.ts
